--- a/cl.conf
+++ b/cl.conf
@@ -33,11 +33,11 @@ hunter: True
 #This is the file from which hunter pull it's filenames
 #Only worry about this if hunter is set to true
 #You can edit this file to add or remove monitored files.
-hunterphile: hunter.lst
+hunterphile: huntr.lst
 
 #Time between checks
-tentacles_pause: 10
-hunter_pause: 3
+tentacles_pause: 20
+hunter_pause: 20
 
 #Front towards enemy
 #Setting this to true will arm all cryptolocked modules every time you run the sscript
